// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkillsDetailsPanel /> renders Skills detailsPanel 1`] = `
<styled.div
  id="dtpanel-skills"
>
  Mock Child
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="users"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<SkillsDetailsPanel /> renders Skills detailsPanel with no proficiency 1`] = `
<styled.div
  id="dtpanel-skills"
>
  Mock Child
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="users"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<SkillsDetailsPanel /> renders Skills detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-skills"
>
  <React.Fragment>
    <Detail
      label="Name"
      value="mockName"
    />
    <Detail
      label="Description"
      value="mockDescription"
    />
    <Detail
      label="Has Proficiency"
      value="Yes"
    />
    <Detail
      label="Status"
      value="Enabled"
    />
  </React.Fragment>
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={false}
    />
    <_class2
      contains="users"
      items={Array []}
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={false}
    />
    <_class2
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={false}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;

exports[`<SkillsDetailsPanel /> renders Skills detailsPanel with status disabled 1`] = `
<styled.div
  id="dtpanel-skills"
>
  Mock Child
  <Connect(DetailWrapper)
    open={true}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Users"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="users"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
  <Connect(DetailWrapper)
    contains="outboundIdentifierLists"
    open={false}
  >
    <Styled(DetailHeader)
      onActionButtonClick={[Function]}
      text=" Outbound Identifier Lists"
      userHasUpdatePermission={true}
    />
    <_class2
      contains="outboundIdentifierLists"
      items={Array []}
      userHasUpdatePermission={true}
    />
  </Connect(DetailWrapper)>
</styled.div>
`;
